; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_biw_msa.c_hevc_hz_biwgt_4t_8x6_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_biw_msa.c_hevc_hz_biwgt_4t_8x6_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32*, i32, i32, i32, i32, i32)* @hevc_hz_biwgt_4t_8x6_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hz_biwgt_4t_8x6_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32* %6, i32 %7, i32 %8, i32 %9, i32 %10, i32 %11) #0 {
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i64, align 8
  %34 = alloca i64, align 8
  %35 = alloca i64, align 8
  %36 = alloca i64, align 8
  %37 = alloca i64, align 8
  %38 = alloca i64, align 8
  %39 = alloca i64, align 8
  %40 = alloca i64, align 8
  %41 = alloca i64, align 8
  %42 = alloca i64, align 8
  %43 = alloca i64, align 8
  %44 = alloca i64, align 8
  %45 = alloca i64, align 8
  %46 = alloca i64, align 8
  %47 = alloca i64, align 8
  %48 = alloca i64, align 8
  %49 = alloca i64, align 8
  %50 = alloca i64, align 8
  %51 = alloca i64, align 8
  %52 = alloca i64, align 8
  %53 = alloca i32, align 4
  %54 = alloca i32, align 4
  %55 = alloca i32, align 4
  store i32* %0, i32** %13, align 8
  store i32 %1, i32* %14, align 4
  store i32* %2, i32** %15, align 8
  store i32 %3, i32* %16, align 4
  store i32* %4, i32** %17, align 8
  store i32 %5, i32* %18, align 4
  store i32* %6, i32** %19, align 8
  store i32 %7, i32* %20, align 4
  store i32 %8, i32* %21, align 4
  store i32 %9, i32* %22, align 4
  store i32 %10, i32* %23, align 4
  store i32 %11, i32* %24, align 4
  %56 = load i32*, i32** @ff_hevc_mask_arr, align 8
  %57 = getelementptr inbounds i32, i32* %56, i64 0
  %58 = call i64 @LD_SB(i32* %57)
  store i64 %58, i64* %42, align 8
  %59 = load i32*, i32** %13, align 8
  %60 = getelementptr inbounds i32, i32* %59, i64 -1
  store i32* %60, i32** %13, align 8
  %61 = load i32*, i32** %19, align 8
  %62 = call i64 @LD_SH(i32* %61)
  store i64 %62, i64* %52, align 8
  %63 = load i64, i64* %52, align 8
  %64 = load i64, i64* %28, align 8
  %65 = load i64, i64* %29, align 8
  %66 = call i32 @SPLATI_H2_SH(i64 %63, i32 0, i32 1, i64 %64, i64 %65)
  %67 = load i32, i32* %22, align 4
  %68 = load i32, i32* %23, align 4
  %69 = add nsw i32 %67, %68
  %70 = load i32, i32* %24, align 4
  %71 = shl i32 %69, %70
  store i32 %71, i32* %26, align 4
  %72 = load i32, i32* %20, align 4
  %73 = and i32 %72, 65535
  store i32 %73, i32* %20, align 4
  %74 = load i32, i32* %20, align 4
  %75 = load i32, i32* %21, align 4
  %76 = shl i32 %75, 16
  %77 = or i32 %74, %76
  store i32 %77, i32* %25, align 4
  %78 = load i32, i32* %21, align 4
  %79 = mul nsw i32 128, %78
  store i32 %79, i32* %27, align 4
  %80 = load i32, i32* %27, align 4
  %81 = shl i32 %80, 6
  store i32 %81, i32* %27, align 4
  %82 = load i32, i32* %27, align 4
  %83 = load i32, i32* %26, align 4
  %84 = add nsw i32 %83, %82
  store i32 %84, i32* %26, align 4
  %85 = load i32, i32* %26, align 4
  %86 = call i32 @__msa_fill_w(i32 %85)
  store i32 %86, i32* %54, align 4
  %87 = load i32, i32* %25, align 4
  %88 = call i32 @__msa_fill_w(i32 %87)
  store i32 %88, i32* %53, align 4
  %89 = load i32, i32* %24, align 4
  %90 = add nsw i32 %89, 1
  %91 = call i32 @__msa_fill_w(i32 %90)
  store i32 %91, i32* %55, align 4
  %92 = load i64, i64* %42, align 8
  %93 = add nsw i64 %92, 2
  store i64 %93, i64* %43, align 8
  %94 = load i32*, i32** %13, align 8
  %95 = load i32, i32* %14, align 4
  %96 = load i64, i64* %30, align 8
  %97 = load i64, i64* %31, align 8
  %98 = load i64, i64* %32, align 8
  %99 = load i64, i64* %33, align 8
  %100 = load i64, i64* %34, align 8
  %101 = load i64, i64* %35, align 8
  %102 = call i32 @LD_SB6(i32* %94, i32 %95, i64 %96, i64 %97, i64 %98, i64 %99, i64 %100, i64 %101)
  %103 = load i32*, i32** %15, align 8
  %104 = load i32, i32* %16, align 4
  %105 = load i64, i64* %36, align 8
  %106 = load i64, i64* %37, align 8
  %107 = load i64, i64* %38, align 8
  %108 = load i64, i64* %39, align 8
  %109 = call i32 @LD_SH4(i32* %103, i32 %104, i64 %105, i64 %106, i64 %107, i64 %108)
  %110 = load i32, i32* %16, align 4
  %111 = mul nsw i32 4, %110
  %112 = load i32*, i32** %15, align 8
  %113 = sext i32 %111 to i64
  %114 = getelementptr inbounds i32, i32* %112, i64 %113
  store i32* %114, i32** %15, align 8
  %115 = load i32*, i32** %15, align 8
  %116 = load i32, i32* %16, align 4
  %117 = load i64, i64* %40, align 8
  %118 = load i64, i64* %41, align 8
  %119 = call i32 @LD_SH2(i32* %115, i32 %116, i64 %117, i64 %118)
  %120 = load i64, i64* %30, align 8
  %121 = load i64, i64* %31, align 8
  %122 = load i64, i64* %32, align 8
  %123 = load i64, i64* %33, align 8
  %124 = load i64, i64* %34, align 8
  %125 = load i64, i64* %35, align 8
  %126 = call i32 @XORI_B6_128_SB(i64 %120, i64 %121, i64 %122, i64 %123, i64 %124, i64 %125)
  %127 = load i64, i64* %30, align 8
  %128 = load i64, i64* %30, align 8
  %129 = load i64, i64* %30, align 8
  %130 = load i64, i64* %30, align 8
  %131 = load i64, i64* %42, align 8
  %132 = load i64, i64* %43, align 8
  %133 = load i64, i64* %44, align 8
  %134 = load i64, i64* %45, align 8
  %135 = call i32 @VSHF_B2_SB(i64 %127, i64 %128, i64 %129, i64 %130, i64 %131, i64 %132, i64 %133, i64 %134)
  %136 = load i64, i64* %44, align 8
  %137 = load i64, i64* %45, align 8
  %138 = load i64, i64* %28, align 8
  %139 = load i64, i64* %29, align 8
  %140 = call i64 @HEVC_FILT_4TAP_SH(i64 %136, i64 %137, i64 %138, i64 %139)
  store i64 %140, i64* %46, align 8
  %141 = load i64, i64* %31, align 8
  %142 = load i64, i64* %31, align 8
  %143 = load i64, i64* %31, align 8
  %144 = load i64, i64* %31, align 8
  %145 = load i64, i64* %42, align 8
  %146 = load i64, i64* %43, align 8
  %147 = load i64, i64* %44, align 8
  %148 = load i64, i64* %45, align 8
  %149 = call i32 @VSHF_B2_SB(i64 %141, i64 %142, i64 %143, i64 %144, i64 %145, i64 %146, i64 %147, i64 %148)
  %150 = load i64, i64* %44, align 8
  %151 = load i64, i64* %45, align 8
  %152 = load i64, i64* %28, align 8
  %153 = load i64, i64* %29, align 8
  %154 = call i64 @HEVC_FILT_4TAP_SH(i64 %150, i64 %151, i64 %152, i64 %153)
  store i64 %154, i64* %47, align 8
  %155 = load i64, i64* %32, align 8
  %156 = load i64, i64* %32, align 8
  %157 = load i64, i64* %32, align 8
  %158 = load i64, i64* %32, align 8
  %159 = load i64, i64* %42, align 8
  %160 = load i64, i64* %43, align 8
  %161 = load i64, i64* %44, align 8
  %162 = load i64, i64* %45, align 8
  %163 = call i32 @VSHF_B2_SB(i64 %155, i64 %156, i64 %157, i64 %158, i64 %159, i64 %160, i64 %161, i64 %162)
  %164 = load i64, i64* %44, align 8
  %165 = load i64, i64* %45, align 8
  %166 = load i64, i64* %28, align 8
  %167 = load i64, i64* %29, align 8
  %168 = call i64 @HEVC_FILT_4TAP_SH(i64 %164, i64 %165, i64 %166, i64 %167)
  store i64 %168, i64* %48, align 8
  %169 = load i64, i64* %33, align 8
  %170 = load i64, i64* %33, align 8
  %171 = load i64, i64* %33, align 8
  %172 = load i64, i64* %33, align 8
  %173 = load i64, i64* %42, align 8
  %174 = load i64, i64* %43, align 8
  %175 = load i64, i64* %44, align 8
  %176 = load i64, i64* %45, align 8
  %177 = call i32 @VSHF_B2_SB(i64 %169, i64 %170, i64 %171, i64 %172, i64 %173, i64 %174, i64 %175, i64 %176)
  %178 = load i64, i64* %44, align 8
  %179 = load i64, i64* %45, align 8
  %180 = load i64, i64* %28, align 8
  %181 = load i64, i64* %29, align 8
  %182 = call i64 @HEVC_FILT_4TAP_SH(i64 %178, i64 %179, i64 %180, i64 %181)
  store i64 %182, i64* %49, align 8
  %183 = load i64, i64* %34, align 8
  %184 = load i64, i64* %34, align 8
  %185 = load i64, i64* %34, align 8
  %186 = load i64, i64* %34, align 8
  %187 = load i64, i64* %42, align 8
  %188 = load i64, i64* %43, align 8
  %189 = load i64, i64* %44, align 8
  %190 = load i64, i64* %45, align 8
  %191 = call i32 @VSHF_B2_SB(i64 %183, i64 %184, i64 %185, i64 %186, i64 %187, i64 %188, i64 %189, i64 %190)
  %192 = load i64, i64* %44, align 8
  %193 = load i64, i64* %45, align 8
  %194 = load i64, i64* %28, align 8
  %195 = load i64, i64* %29, align 8
  %196 = call i64 @HEVC_FILT_4TAP_SH(i64 %192, i64 %193, i64 %194, i64 %195)
  store i64 %196, i64* %50, align 8
  %197 = load i64, i64* %35, align 8
  %198 = load i64, i64* %35, align 8
  %199 = load i64, i64* %35, align 8
  %200 = load i64, i64* %35, align 8
  %201 = load i64, i64* %42, align 8
  %202 = load i64, i64* %43, align 8
  %203 = load i64, i64* %44, align 8
  %204 = load i64, i64* %45, align 8
  %205 = call i32 @VSHF_B2_SB(i64 %197, i64 %198, i64 %199, i64 %200, i64 %201, i64 %202, i64 %203, i64 %204)
  %206 = load i64, i64* %44, align 8
  %207 = load i64, i64* %45, align 8
  %208 = load i64, i64* %28, align 8
  %209 = load i64, i64* %29, align 8
  %210 = call i64 @HEVC_FILT_4TAP_SH(i64 %206, i64 %207, i64 %208, i64 %209)
  store i64 %210, i64* %51, align 8
  %211 = load i64, i64* %46, align 8
  %212 = load i64, i64* %47, align 8
  %213 = load i64, i64* %48, align 8
  %214 = load i64, i64* %49, align 8
  %215 = load i64, i64* %36, align 8
  %216 = load i64, i64* %37, align 8
  %217 = load i64, i64* %38, align 8
  %218 = load i64, i64* %39, align 8
  %219 = load i32, i32* %53, align 4
  %220 = load i32, i32* %55, align 4
  %221 = load i32, i32* %54, align 4
  %222 = load i64, i64* %46, align 8
  %223 = load i64, i64* %47, align 8
  %224 = load i64, i64* %48, align 8
  %225 = load i64, i64* %49, align 8
  %226 = call i32 @HEVC_BIW_RND_CLIP4(i64 %211, i64 %212, i64 %213, i64 %214, i64 %215, i64 %216, i64 %217, i64 %218, i32 %219, i32 %220, i32 %221, i64 %222, i64 %223, i64 %224, i64 %225)
  %227 = load i64, i64* %50, align 8
  %228 = load i64, i64* %51, align 8
  %229 = load i64, i64* %40, align 8
  %230 = load i64, i64* %41, align 8
  %231 = load i32, i32* %53, align 4
  %232 = load i32, i32* %55, align 4
  %233 = load i32, i32* %54, align 4
  %234 = load i64, i64* %50, align 8
  %235 = load i64, i64* %51, align 8
  %236 = call i32 @HEVC_BIW_RND_CLIP2(i64 %227, i64 %228, i64 %229, i64 %230, i32 %231, i32 %232, i32 %233, i64 %234, i64 %235)
  %237 = load i64, i64* %47, align 8
  %238 = load i64, i64* %46, align 8
  %239 = load i64, i64* %49, align 8
  %240 = load i64, i64* %48, align 8
  %241 = load i64, i64* %46, align 8
  %242 = load i64, i64* %47, align 8
  %243 = call i32 @PCKEV_B2_SH(i64 %237, i64 %238, i64 %239, i64 %240, i64 %241, i64 %242)
  %244 = load i64, i64* %51, align 8
  %245 = load i64, i64* %50, align 8
  %246 = call i64 @__msa_pckev_b(i64 %244, i64 %245)
  store i64 %246, i64* %49, align 8
  %247 = load i64, i64* %46, align 8
  %248 = load i64, i64* %47, align 8
  %249 = load i32*, i32** %17, align 8
  %250 = load i32, i32* %18, align 4
  %251 = call i32 @ST_D4(i64 %247, i64 %248, i32 0, i32 1, i32 0, i32 1, i32* %249, i32 %250)
  %252 = load i64, i64* %49, align 8
  %253 = load i32*, i32** %17, align 8
  %254 = load i32, i32* %18, align 4
  %255 = mul nsw i32 4, %254
  %256 = sext i32 %255 to i64
  %257 = getelementptr inbounds i32, i32* %253, i64 %256
  %258 = load i32, i32* %18, align 4
  %259 = call i32 @ST_D2(i64 %252, i32 0, i32 1, i32* %257, i32 %258)
  ret void
}

declare dso_local i64 @LD_SB(i32*) #1

declare dso_local i64 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H2_SH(i64, i32, i32, i64, i64) #1

declare dso_local i32 @__msa_fill_w(i32) #1

declare dso_local i32 @LD_SB6(i32*, i32, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @LD_SH4(i32*, i32, i64, i64, i64, i64) #1

declare dso_local i32 @LD_SH2(i32*, i32, i64, i64) #1

declare dso_local i32 @XORI_B6_128_SB(i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @VSHF_B2_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i64 @HEVC_FILT_4TAP_SH(i64, i64, i64, i64) #1

declare dso_local i32 @HEVC_BIW_RND_CLIP4(i64, i64, i64, i64, i64, i64, i64, i64, i32, i32, i32, i64, i64, i64, i64) #1

declare dso_local i32 @HEVC_BIW_RND_CLIP2(i64, i64, i64, i64, i32, i32, i32, i64, i64) #1

declare dso_local i32 @PCKEV_B2_SH(i64, i64, i64, i64, i64, i64) #1

declare dso_local i64 @__msa_pckev_b(i64, i64) #1

declare dso_local i32 @ST_D4(i64, i64, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @ST_D2(i64, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
